@@ -121,9 +121,13 @@ public class EndlessOcean extends StdGrid
 				}
 			}
 			if(rawDoors()[Directions.WEST]==null)
+			{
 				for(int i=0;i<subMap[0].length;i++)
+				{
 					if(subMap[0][i]!=null)
 						linkRoom(subMap[0][i],subMap[xGridSize()/2][i],Directions.WEST,ox,ox);
+				}
+			}
 			if(Directions.NORTHEAST<Directions.NUM_DIRECTIONS())
 			{
 				if(rawDoors()[Directions.NORTHEAST]==null)
@@ -134,8 +138,10 @@ public class EndlessOcean extends StdGrid
 							linkRoom(element[0],subMap[xGridSize()/2][yGridSize()/2],Directions.NORTHEAST,ox,ox);
 					}
 					for(int i=0;i<subMap[0].length;i++)
+					{
 						if(subMap[subMap.length-1][i]!=null)
 							linkRoom(subMap[subMap.length-1][i],subMap[xGridSize()/2][yGridSize()/2],Directions.NORTHEAST,ox,ox);
+					}
 				}
 				if(rawDoors()[Directions.NORTHWEST]==null)
 				{
@@ -145,8 +151,10 @@ public class EndlessOcean extends StdGrid
 							linkRoom(element[0],subMap[xGridSize()/2][yGridSize()/2],Directions.NORTHWEST,ox,ox);
 					}
 					for(int i=0;i<subMap[0].length;i++)
+					{
 						if(subMap[0][i]!=null)
 							linkRoom(subMap[0][i],subMap[xGridSize()/2][yGridSize()/2],Directions.NORTHWEST,ox,ox);
+					}
 				}
 				if(rawDoors()[Directions.SOUTHWEST]==null)
 				{
@@ -156,8 +164,10 @@ public class EndlessOcean extends StdGrid
 							linkRoom(element[yGridSize()-1],subMap[xGridSize()/2][yGridSize()/2],Directions.SOUTHWEST,ox,ox);
 					}
 					for(int i=0;i<subMap[0].length;i++)
+					{
 						if(subMap[0][i]!=null)
 							linkRoom(subMap[0][i],subMap[xGridSize()/2][yGridSize()/2],Directions.SOUTHWEST,ox,ox);
+					}
 				}
 				if(rawDoors()[Directions.SOUTHEAST]==null)
 				{
@@ -167,8 +177,10 @@ public class EndlessOcean extends StdGrid
 							linkRoom(element[yGridSize()-1],subMap[xGridSize()/2][yGridSize()/2],Directions.SOUTHEAST,ox,ox);
 					}
 					for(int i=0;i<subMap[0].length;i++)
+					{
 						if(subMap[subMap.length-1][i]!=null)
 							linkRoom(subMap[subMap.length-1][i],subMap[xGridSize()/2][yGridSize()/2],Directions.NORTHEAST,ox,ox);
+					}
 				}
 			}
 		}
